applied eslint rules and code review suggestions

--- a/views/lib/components/alert.hbs
+++ b/views/lib/components/alert.hbs
@@ -1,5 +1,5 @@
 {{#each alert.data}}
-<div class="alert alert-info" id="_alert" style="display: none;" data-timestamp="{{this.timestamp}}" data-origin-page="{{this.origin.page}}"  data-origin-id="{{this.origin.message_id}}">
+<div class="alert alert-info alert-card" style="display: none;" data-timestamp="{{this.timestamp}}" data-origin-page="{{this.origin.page}}"  data-origin-id="{{this.origin.message_id}}">
     <div class="alert-content">
         <button type="button" class="close alert-close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
