fix class creation

--- a/views/administration/forms/form-classes-edit.hbs
+++ b/views/administration/forms/form-classes-edit.hbs
@@ -1,4 +1,4 @@
-<input name="schoolId" type="hidden" data-force-value="true" value="{{../currentSchool}}" />
+<input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}" />
 
 {{#ifeq mode "edit"}}
 	<input type="hidden" name="_id" value="{{../class._id}}" />
