draft to invalidate pin after failed submit

--- a/views/registration/pin.hbs
+++ b/views/registration/pin.hbs
@@ -4,6 +4,7 @@
     <input class="digit" type="text" pattern="{{../pattern~}} {1}" maxlength="1" placeholder="·" {{#if ../required}}required{{/if}}>
   {{/times}}
 </div>
+<p class="pin-invalidated hidden">Die zuletzt übermittelte PIN ist nun verbraucht. Wenn etwas nicht funktioniert hat, generiere dir bitte mittels "Code erneut zusenden" eine neue PIN und gib diese hier ein.</p>
 
 <script src="/scripts/dataprivacy/pin_input.js" type="text/javascript" defer></script>
 
