SC-2780 - disable autocomplete on login form

--- a/views/authentication/forms/login.hbs
+++ b/views/authentication/forms/login.hbs
@@ -8,7 +8,7 @@
                 <input type="hidden" name="challenge" value={{challenge}} />
 
                 <div class="form-group">
-                    <input type="text" autocomplete="username" name="username" class="form-control form-control-lg" placeholder="E-Mail / Nutzername" data-testid="username" required>
+                    <input type="text" autocomplete="off" name="username" class="form-control form-control-lg" placeholder="E-Mail / Nutzername" data-testid="username" required>
                     <div class="input-group mt-1" id="show_hide_password">
                         <input type="password" autocomplete="current-password" name="password" class="form-control form-control-lg" placeholder="Passwort" data-testid="password" required>
                         <div class="input-group-addon">
