finish schools, optimize html

--- a/theme/thr/views/about/about.hbs
+++ b/theme/thr/views/about/about.hbs
@@ -63,8 +63,12 @@
 					<div class="partner-box-wrapper col-xs-6 col-md-3">
 						<div class="partner-box">
 							<a href="{{{url}}}" target="_blank">
-								<img src="{{{logo}}}" alt="Logo {{{name}}}" class="img-fluid" {{#if padding}}
+								{{#if logo}}
+									<img src="{{{logo}}}" alt="Logo {{{name}}}" title="{{{name}}}" class="img-fluid" {{#if padding}}
 									style="padding: {{{padding}}};" {{/if}}>
+								{{else}}
+									<i class="fa fa-university schoollogo-placeholder" aria-hidden="true"></i>
+								{{/if}}
 							</a>
 						</div>
 					</div>
@@ -75,8 +79,12 @@
 							<div class="partner-box-wrapper col-xs-6 col-md-3">
 								<div class="partner-box">
 									<a href="{{{url}}}" target="_blank">
-										<img src="{{{logo}}}" alt="Logo {{{name}}}" class="img-fluid" {{#if padding}}
+										{{#if logo}}
+											<img src="{{{logo}}}" alt="Logo {{{name}}}" title="{{{name}}}" class="img-fluid" {{#if padding}}
 											style="padding: {{{padding}}};" {{/if}}>
+										{{else}}
+											<i class="fa fa-university schoollogo-placeholder" aria-hidden="true"></i>
+										{{/if}}
 									</a>
 								</div>
 							</div>
@@ -96,8 +104,12 @@
 					<div class="partner-box-wrapper col-xs-6 col-md-3">
 						<div class="partner-box">
 							<a href="{{{url}}}" target="_blank">
-								<img src="{{{logo}}}" alt="Logo {{{name}}}" class="img-fluid" {{#if padding}}
+								{{#if logo}}
+									<img src="{{{logo}}}" alt="Logo {{{name}}}" title="{{{name}}}" class="img-fluid" {{#if padding}}
 									style="padding: {{{padding}}};" {{/if}}>
+								{{else}}
+									<i class="fa fa-university schoollogo-placeholder" aria-hidden="true"></i>
+								{{/if}}
 							</a>
 						</div>
 					</div>
@@ -108,8 +120,12 @@
 							<div class="partner-box-wrapper col-xs-6 col-md-3">
 								<div class="partner-box">
 									<a href="{{{url}}}" target="_blank">
-										<img src="{{{logo}}}" alt="Logo {{{name}}}" class="img-fluid" {{#if padding}}
+										{{#if logo}}
+											<img src="{{{logo}}}" alt="Logo {{{name}}}" title="{{{name}}}" class="img-fluid" {{#if padding}}
 											style="padding: {{{padding}}};" {{/if}}>
+										{{else}}
+											<i class="fa fa-university schoollogo-placeholder" aria-hidden="true"></i>
+										{{/if}}
 									</a>
 								</div>
 							</div>
