--- a/views/help/forms/form_bug.hbs
+++ b/views/help/forms/form_bug.hbs
@@ -40,4 +40,13 @@
 	</div>
 </div>
 </label>
+<br>
+<label class="form-group">
+    <span class="control-label">Screenshots (max. 10MB):</span>
+	<span class="control-label" id="file-alert"></span>
+    <input type="file" class="form-control-file" name="file" multiple="multiple" accept="image/*">
+</label>
+<label class="form-group">
+	<input type="hidden" name="image" id="image" class="form-control">
+</label>
 <hr>
