added problem Description field

--- a/views/help/contact.hbs
+++ b/views/help/contact.hbs
@@ -35,7 +35,7 @@
     <form class="bug_form" action="/helpdesk" method="post" enctype="multipart/form-data">
       {{> "help/forms/form_bug"}}
       {{> "lib/components/csrfInput"}}
-      <button type="submit">Absenden</button>
+      <button id="submitBugForm" type="submit">Absenden</button>
     </form>
   </div>
 </div>
