--- a/views/help/forms/form_bug.hbs
+++ b/views/help/forms/form_bug.hbs
@@ -6,12 +6,8 @@
 	<input class="form-control" type="text" name="title" placeholder="Kurzbeschreibung des Problems" required>
 </label>
 <label class="form-group">
-	<label class="control-label">IST-Zustand: Was geschieht zur Zeit, nachdem ich welche Schritte durchgeführt habe?</label>
-	<textarea class="form-control" cols="50" name="currentState" rows="6" required></textarea>
-</label>
-<label class="form-group">
-	<label class="control-label">SOLL-Zustand: Was sollte stattdessen geschehen?</label>
-	<textarea class="form-control" cols="50" name="targetState" rows="6" required></textarea>
+	<label class="control-label">Problembeschreibung:</label>
+<textarea class="form-control" cols="50" name="problemDescription" rows="14" required></textarea>
 </label>
 <label class="form-group">
 	<span class="control-label optional">Das Problem tritt auf diesem Gerät auf</span>
@@ -44,7 +40,7 @@
 <label class="form-group">
     <span class="control-label">Screenshots (max. 10MB):</span>
 	<span class="control-label" id="file-alert"></span>
-    <input type="file" class="form-control-file" name="file" multiple="multiple" accept="image/*">
+    <input type="file" class="form-control-file" name="file" multiple="multiple" accept="image/*,video/*">
 </label>
 <label class="form-group">
 	<input type="hidden" name="image" id="image" class="form-control">
