--- a/views/help/forms/form_bug.hbs
+++ b/views/help/forms/form_bug.hbs
@@ -38,11 +38,11 @@
 </label>
 <br>
 <label class="form-group">
-    <span class="control-label">Screenshots (max. 10MB):</span>
-	<span class="control-label" id="file-alert"></span>
+    <span class="control-label">Bilder oder Videos (max. 10MB):</span>
     <input type="file" class="form-control-file" name="file" multiple="multiple" accept="image/*,video/*">
 </label>
 <label class="form-group">
 	<input type="hidden" name="image" id="image" class="form-control">
 </label>
 <hr>
+<span class="control-label" id="file-alert"></span>
