--- a/views/registration/registration-employee.hbs
+++ b/views/registration/registration-employee.hbs
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="/styles/administration/dataprivacy.css"/>
   {{/content}}
   {{#content "page"}}
-    {{#embed "lib/forms/paginatedForm" sections=5 action="/registration/submit" method="post" class="registration-form parent"}}
+    {{#embed "lib/forms/paginatedForm" sections=5 action="/registration/submit" method="post" class="registration-form parent" submit-label="Absenden & Loslegen"}}
       {{#content "panels"}}
       <input type="hidden" name="classOrSchoolId" value="{{user.classOrSchoolId}}"/>
       <input type="hidden" name="roles" value="employee"/>
@@ -17,6 +17,7 @@
 
       {{#if user.importHash}}<input type="hidden" name="importHash" value="{{user.importHash}}"/>{{/if}}
       {{#if user.userId}}<input type="hidden" name="userId" value="{{user.userId}}"/>{{/if}}
+      {{#if invalid}}<input type="hidden" name="invalid" value="{{invalid}}" />{{/if}}
 
       <section data-panel="section-1" class="noback">
         <h2 class="h4">Willkommen zur Anmeldung in der {{theme.title}}</h2>
