move up feedback in footer

--- a/theme/thr/views/lib/extended_footer.hbs
+++ b/theme/thr/views/lib/extended_footer.hbs
@@ -6,10 +6,9 @@
 			<div class="col-md-4">
 				<h2 class="h4">Kontakt</h2>
 				<ul>
-					<li><a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">Allgemeine Anfragen: <span class="text-nowrap">info@schul-cloud.org</span></a></li>
 					{{> "lib/extended_footer_links"}}
-					<li><a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank" rel="noopener">Newsletter
-							abonnieren</a></li>
+					<li><a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank" rel="noopener">
+					<span class="text-nowrap">Newsletter abonnieren</span></a></li>
 				</ul>
 			</div>
 			<div class="col-md-4">
