--- a/views/lib/extended_footer_links.hbs
+++ b/views/lib/extended_footer_links.hbs
@@ -1,3 +1,4 @@
 					<li><a href="mailto:feedback@schul-cloud.org" target="_blank" rel="noopener">Support: <span class="text-nowrap">feedback@schul-cloud.org</span></a></li>
+					<li><a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">Allgemeine Anfragen: <span class="text-nowrap">info@schul-cloud.org</span></a></li>
 					<li><a href="mailto:inhalte@schul-cloud.org" target="_blank" rel="noopener">Inhalteanbieter: <span class="text-nowrap">inhalte@schul-cloud.org</span></a></li>
 					<li><a href="mailto:datenschutz@schul-cloud.org" target="_blank" rel="noopener">Datenschutz: <span class="text-nowrap">datenschutz@schul-cloud.org</span></a></li>
