--- a/theme/brb/views/lib/extended_footer.hbs
+++ b/theme/brb/views/lib/extended_footer.hbs
@@ -4,8 +4,10 @@
 			<div class="col-md-4">
 				<h4>Kontakt</h4>
 				<ul>
+					<li><a href="mailto:feedback@schul-cloud.org" target="_blank" rel="noopener">Support: <span class="text-nowrap">feedback@schul-cloud.org</span></a></li>
 					<li><a href="mailto:brandenburg@schul-cloud.org" target="_blank" rel="noopener">Allgemeine Anfragen: <span class="text-nowrap">brandenburg@schul-cloud.org</span></a></li>
-					{{> "lib/extended_footer_links"}}
+					<li><a href="mailto:inhalte@schul-cloud.org" target="_blank" rel="noopener">Inhalteanbieter: <span class="text-nowrap">inhalte@schul-cloud.org</span></a></li>
+					<li><a href="mailto:datenschutz@schul-cloud.org" target="_blank" rel="noopener">Datenschutz: <span class="text-nowrap">datenschutz@schul-cloud.org</span></a></li>
 				</ul>
 			</div>
 			<div class="col-md-4">
