Anpassung Mitmachen Seite Bosscloud

--- a/views/community/community.hbs
+++ b/views/community/community.hbs
@@ -33,20 +33,12 @@
 
             <h4>Können auch nicht MINT-EC Schulen die HPI Schul-Cloud erproben?</h4>
             <p>
-                In den Pilotphasen beschränkt sich die Nutzung der HPI Schul-Cloud auf Schulen des nationalen Excellence Schulnetzwerks MINT-EC.
-                Da uns bewusst ist, wie hoch die Nachfrage auch von anderen Schulen ist, sammeln wir momentan die Anfragen auf einer
-                Interessenliste und werden zu gegebener Zeit mit dem BMBF über eine weitere Öffnung sprechen. Falls Sie Interesse
-                an der Nutzung der HPI Schul-Cloud haben, senden Sie gerne folgende Informationen an
-                <a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">info@schul-cloud.org</a>:
-                <ul>
-                    <li>Name der Schule und Schulform</li>
-                    <li>Geschwindigkeit des Internetanschlusses in Ihrer Schule</li>
-                    <li>Anzahl der W-LAN-Router mit Hinweis für welche Zielgruppen diese freigegeben sind (Lehrer, Schüler, beide)</li>
-                    <li>Informationen darüber, ob Ihre Schule komplett mit W-LAN ausgeleuchtet ist oder nur teilweise</li>
-                    <li>Anzahl der vorhandenen mobilen und webfähigen Endgeräte (Laptops, Tablets, etc.) oder ob der Bring-Your-Own-Device als Ansatz aktiv eingesetzt wird</li>
-                </ul>
+                Ja, wir freuen uns sehr die HPI-Schul-Cloud ab sofort allen interessierten Schulen in Deutschland anzubieten!<br />
+                Schreiben Sie einfach eine E-Mail an <a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">info@schul-cloud.org</a> und wir vereinbaren einen gemeinsamen Telefontermin, in welchem wir uns über Ihre Bedarfe und Wünsche zum Einsatz der HPI Schul-Cloud austauschen. 
             </p>
-            <p>Gerne können Sie außerdem <a href="https://hpi.de/fileadmin/user_upload/hpi/dokumente/flyer/Schul-Cloud_Technische_Vorbereitungen.pdf" target="_blank" rel="noopener">hier</a> einsehen, welche Hinweise bei der Vorbereitung auf eine mögliche HPI Schul-Cloud Nutzung helfen können.</p>
+            <p>
+			<a href="https://hpi.de/fileadmin/user_upload/hpi/dokumente/flyer/Schul-Cloud_Technische_Vorbereitungen.pdf" target="_blank" rel="noopener">Hier</a> können Sie bereits einsehen, welche Hinweise bei der Vorbereitung auf eine mögliche HPI Schul-Cloud Nutzung helfen können.
+			</p>
             <br />
 		{{/content}}
 	{{/embed}}
