--- a/views/community/community.hbs
+++ b/views/community/community.hbs
@@ -33,7 +33,7 @@
 
             <h4>Können auch nicht MINT-EC Schulen die HPI Schul-Cloud erproben?</h4>
             <p>
-                Ja, wir freuen uns sehr die HPI-Schul-Cloud ab sofort allen interessierten Schulen in Deutschland anzubieten!<br />
+                Ja, wir freuen uns sehr die HPI Schul-Cloud ab sofort allen interessierten Schulen in Deutschland anzubieten!<br />
                 Schreiben Sie einfach eine E-Mail an <a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">info@schul-cloud.org</a> und wir vereinbaren einen gemeinsamen Telefontermin, in welchem wir uns über Ihre Bedarfe und Wünsche zum Einsatz der HPI Schul-Cloud austauschen. 
             </p>
             <p>
