added attachments to wishes

--- a/static/styles/help/help.scss
+++ b/static/styles/help/help.scss
@@ -234,6 +234,10 @@ fieldset.switch_wrapper {
           background-color: #7f0328;
         }
       }
+
+      .file-alert {
+        color: $primaryColor;
+      }
     }
 
     p {
