--- a/views/help/forms/form_bug.hbs
+++ b/views/help/forms/form_bug.hbs
@@ -41,8 +41,5 @@
     <span class="control-label">Bilder oder Videos (max. 10MB):</span>
     <input type="file" class="form-control-file" name="file" multiple="multiple" accept="image/*,video/*">
 </label>
-<label class="form-group">
-	<input type="hidden" name="image" id="image" class="form-control">
-</label>
 <hr>
-<span class="control-label" id="file-alert"></span>
+<span class="control-label file-alert"></span>
