--- a/views/help/forms/form_wish.hbs
+++ b/views/help/forms/form_wish.hbs
@@ -48,4 +48,10 @@
 	</div>
 </div>
 </label>
+<br>
+<label class="form-group">
+    <span class="control-label">Bilder oder Videos (max. 10MB):</span>
+    <input type="file" class="form-control-file" name="file" multiple="multiple" accept="image/*,video/*">
+</label>
 <hr>
+<span class="control-label file-alert"></span>
