add configuration for different team visibility options

--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -72,17 +72,22 @@
                     </div>
                 </div>
                 {{/userHasPermission}}
-
-				{{#unless hideVisibilitySettings}}
+				{{#userHasRole "student"}}
+				{{else}}
+				{{#ifneq ../../config.TEACHER_VISIBILITY_FOR_EXTERNAL_TEAM_INVITATION "disabled"}}
+				<h5>Teams</h5>
 				<div class="form-group">
-					<label>
-						<input type="checkbox" name="discoverable" value="true" {{#if isDiscoverable}}checked{{/if}}>
-						Sichtbar für Teameinladungen
-						<p class="text-muted">Ist diese Funktion aktiviert, können Dich Lehrkräfte anderer Schulen, die Teamadministratoren sind, über einen {{theme.short_title}}-zentralen Verzeichnisdienst bequem in ein schulübergreifendes Team einladen. Dein Name ist deiner Schule zugeordnet und in der Verzeichnisstruktur unter Name des Bundeslandes > Name der Schule > Namen der Lehrkräfte aufrufbar.</p>
-						</p>
-					</label>
+					Sichtbarkeit für Teameinladungen
+					<p class="text-muted">Lehrkräfte anderer Schulen, die Teamadministratoren sind, können dich über den zentralen Verzeichnisdienst der {{theme.short_title}}bequem in ein schulübergreifendes Team einladen. Dein Name ist dabei deiner Schule zugeordnet und in der Verzeichnisstruktur unter <i>Name deines Bundeslandes &raquo; Name deiner Schule &raquo; dein Name</i> aufrufbar.</p>
+
+					{{#ifeq ../../config.TEACHER_VISIBILITY_FOR_EXTERNAL_TEAM_INVITATION "enabled"}}<label>Die Sichtbarkeit im zentralen Verzeichnis ist systemweit für alle Lehrer aktiviert und kann nicht deaktiviert werden.</label>{{/ifeq}}
+
+					{{#ifeq ../../config.TEACHER_VISIBILITY_FOR_EXTERNAL_TEAM_INVITATION "opt-in"}}<label><input type="checkbox" name="discoverable" value="true" {{#if isDiscoverable}}checked{{/if}}> Sichtbarkeit im zentralen Verzeichnis aktivieren</label>{{/ifeq}}
+
+					{{#ifeq ../../config.TEACHER_VISIBILITY_FOR_EXTERNAL_TEAM_INVITATION "opt-out"}}<label><input type="checkbox" name="discoverable" value="false" {{#if isDiscoverable}}checked{{/if}}> Sichtbarkeit im zentralen Verzeichnis deaktivieren</label>{{/ifeq}}
 				</div>
-				{{/unless}}
+				{{/ifneq}}
+				{{/userHasRole}}
 
 
                 {{> "lib/components/csrfInput"}}
