chaange input labels and add helper text

--- a/views/authentication/forms/pwrecovery.hbs
+++ b/views/authentication/forms/pwrecovery.hbs
@@ -1,12 +1,17 @@
 <div class="form-group">
-    <label class="control-label" for="username">Ihr Nutzername</label>
+    <label class="control-label" for="username">Deine E-Mail-Adresse/Nutzername</label>
     <input type="text"
            autocomplete="username"
            name="username"
            id="username"
            size="30"
            maxlength="60"
-           placeholder="Ihr Nutzername"
+           placeholder="Deine E-Mail-Adresse/Nutzername"
            class="form-control"
             required>
 </div>
+<p>
+    Wenn du zusätzliche Hilfe beim Passwort zurücksetzen benötigst, wende Dich bitte an deine betreuende Lehrkraft 
+    (als Schüler) oder an deinen Administrator (als Lehrkraft). </br>
+    Diese können dein Passwort über die Nutzerverwaltung mit sofortiger Wirkung zurücksetzen.
+</p>
