--- a/views/authentication/forms/pwrecovery.hbs
+++ b/views/authentication/forms/pwrecovery.hbs
@@ -11,7 +11,7 @@
             required>
 </div>
 <p>
-    Wenn du zusätzliche Hilfe beim Passwort zurücksetzen benötigst, wende Dich bitte an deine betreuende Lehrkraft 
+    Wenn du zusätzliche Hilfe beim Passwort zurücksetzen benötigst, wende dich bitte an deine betreuende Lehrkraft 
     (als Schüler) oder an deinen Administrator (als Lehrkraft). </br>
     Diese können dein Passwort über die Nutzerverwaltung mit sofortiger Wirkung zurücksetzen.
 </p>
