Allowing ms-word and pdf files

--- a/views/help/forms/form_bug.hbs
+++ b/views/help/forms/form_bug.hbs
@@ -38,8 +38,8 @@
 </label>
 <br>
 <label class="form-group">
-    <span class="control-label">Bilder oder Videos (max. 10MB):</span>
-    <input type="file" class="form-control-file" name="file" multiple="multiple" accept="image/*,video/*">
+    <span class="control-label">Bilder, Videos oder Textdateien (max. 10MB):</span>
+    <input type="file" class="form-control-file" name="file" multiple="multiple" accept="image/*,video/*,application/msword,application/pdf">
 </label>
 <hr>
 <span class="control-label file-alert"></span>
